--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,42 +4,53 @@ services:
   web:
     build: .
     command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate &&
-             python manage.py collectstatic --noinput &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000"
+      bash -c "
+        # Wait for db to be ready
+        while ! nc -z db 5432; do
+          echo 'Waiting for database...'
+          sleep 1
+        done
+        echo 'Database is up!'
+        
+        # Run migrations
+        python manage.py migrate
+        
+        # Collect static files
+        python manage.py collectstatic --noinput
+        
+        # Start server
+        gunicorn config.wsgi:application --bind 0.0.0.0:8000
+      "
     volumes:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
-    expose:
-      - 8000
     env_file:
       - .env.prod
     depends_on:
       - db
-
-  nginx:
-    build: ./nginx
-    volumes:
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-      - ./nginx/conf.d:/etc/nginx/conf.d
-    ports:
-      - "80:80"
-      - "443:443"
-    depends_on:
-      - web
+    restart: always
 
   db:
     image: postgres:15
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=imagesharing
+      - POSTGRES_USER=imagesharing_user
+      - POSTGRES_PASSWORD=StrongDBPassword123!
+    restart: always
+
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     ports:
-      - "5432:5432"
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - web
+    restart: always
 
 volumes:
   postgres_data:
