--- a/nginx/conf.d/local.conf
+++ b/nginx/conf.d/local.conf
@@ -4,7 +4,7 @@ upstream django {
 
 server {
     listen 80;
-    server_name localhost;
+    server_name localhost 54.170.226.246;
     client_max_body_size 100M;
 
     location / {
