--- a/nginx/conf.d/local.conf.template
+++ b/nginx/conf.d/local.conf.template
@@ -4,7 +4,7 @@ upstream django {
 
 server {
     listen 80;
-    server_name localhost;
+    server_name localhost ${SERVER_IP};
     client_max_body_size 100M;
 
     location / {
