--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -34,10 +34,12 @@ services:
     image: postgres:15
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env.prod
     environment:
-      - POSTGRES_DB=imagesharing
-      - POSTGRES_USER=imagesharing_user
-      - POSTGRES_PASSWORD=StrongDBPassword123!
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     restart: always
 
   nginx:
@@ -51,8 +53,10 @@ services:
     depends_on:
       - web
     restart: always
+    env_file:
+      - .env.prod
     environment:
-      - SERVER_IP=${SERVER_IP:-localhost}
+      - SERVER_IP=${SERVER_IP}
 
 volumes:
   postgres_data:
