--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,6 +47,8 @@ services:
     volumes:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
+      # To enable SSL, uncomment the line below and mount your SSL certificates
+      # - ./ssl:/etc/nginx/ssl
     ports:
       - "80:80"
       - "443:443"
@@ -57,6 +59,9 @@ services:
       - .env.prod
     environment:
       - SERVER_IP=${SERVER_IP}
+      - ENVIRONMENT=production
+      - USE_SSL=${USE_SSL:-false}
+      - DOMAIN_NAME=${DOMAIN_NAME:-localhost}
 
 volumes:
   postgres_data:
