--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,21 +29,21 @@ services:
       - ./media:/app/media
     env_file:
       - .env.prod
-#    depends_on:
-#      - db
+    depends_on:
+      - db
     restart: always
 
-#  db:
-#    image: postgres:15
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
-#    env_file:
-#      - .env.prod
-#    environment:
-#      - POSTGRES_DB=${DB_NAME}
-#      - POSTGRES_USER=${DB_USER}
-#      - POSTGRES_PASSWORD=${DB_PASSWORD}
-#    restart: always
+  db:
+    image: postgres:15
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env.prod
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    restart: always
 
   nginx:
     build: ./nginx
